@@ -398,6 +398,7 @@ TESTS_python = \
   python/randgen.py \
   python/relabel.py \
   python/remfin.py \
+  python/removeap.py \
   python/satmin.py \
   python/sbacc.py \
   python/sccfilter.py \
