@@ -14,6 +14,10 @@ New in spot 2.7.4.dev (not yet released)
     C++ code for translating certains formulas to be noticeably slower
     than the equivalent call to the ltl2tgba binary.
 
+  - The remove_ap algorithm was preserving the "terminal property" of
+    automata, but it is possible that a non-terminal input produces a
+    terminal output after some propositions are removed.
+
 New in spot 2.7.4 (2019-04-27)
 
   Bugs fixed:
